# text_stream_handler

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Compress/: compresStream.h
src/Crypto/: CryptoStream.h  cryptoStream.h
src/streams/: IStream.h  main.cpp  readStream.h  writeStream.h
tests/: CMakeLists.txt
tests/src/: test.cpp
